--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development vite",
     "dev:prod": "cross-env NODE_ENV=production vite --mode production",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vite build",
+    "dist": "vue-tsc --noEmit && vite build && electron-builder",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
@@ -23,6 +24,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.8.1",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.1",
@@ -30,8 +32,7 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.7.0",
     "cross-env": "^10.0.0",
-    "electron": "^37.2.6",
-    "electron-builder": "^26.0.12",
+    "electron": "^30.5.1",
     "electron-devtools-installer": "^4.0.0",
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "~10.3.0",
